smm_clients/deploy_marvin/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvin-prompt-inspection
  namespace: vowel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /marvin
        pathType: Prefix
        backend:
          service:
            name: marvin-prompt-inspection-svc
            port:
              number: 8080
